# demos

apple/absolute-trackpad/: CMakeLists.txt  absolutetrackpad.mm
common/cpp/: CMakeLists.txt  common_core.hh  common_math.hh
dsa/boids/: CMakeLists.txt  boids.cc
